--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,54 @@
 </div>
 			<div id="main">
 
-<p>哈囉</p>
+<p>騎車、吃胖、交朋友，
+無論你在不在學，
+無論你是不是讀台大，
+都歡迎各位舊雨新知一同加入台大單車社~</p>
+<p><a href="https://www.facebook.com/ntucyc">Facebook 粉專</a>
+<a href="https://www.facebook.com/groups/NTUCYCLUB/">Facebook 社團</a>
+<a href="https://youtu.be/072tU1tamd0">優惠活動</a></p>
+<h1 id="為什麼要加入單車社">為什麼要加入單車社</h1>
+<ul>
+<li>帶你遊遍全台灣 擁抱大自然 享受脫離塵囂的自由</li>
+<li>帶你吃遍各地美食小吃 老街夜市 逛好逛滿</li>
+<li>教你如何在享受風景與美食的同時保護自己 遠離三寶</li>
+<li>騎車運動不再孤單一人 找到自己的運動好夥伴</li>
+<li>挑戰自我極限 不管是登武嶺還是環島 都難不倒你</li>
+<li>專業技師與維修人員 修車/改車/組車樣樣來</li>
+<li>找到一群好朋友 一起運動一起玩一起吃 留下最美好回憶
+.</li>
+</ul>
+<h1 id="單車社在做什麼">單車社在做什麼</h1>
+<ul>
+<li>行事曆：https://www.facebook.com/ntucyc/posts/1976956985780302</li>
+<li>每週二午聚：揪團吃飯認識朋友的好機會</li>
+<li>每週五社課：教你最專業的單車知識</li>
+<li>每週末活動：帶你騎遍各地好玩景點</li>
+<li>期中大活動：單車小旅行 兩天一夜帶你認識你所不知道的台灣</li>
+<li>期初期末社員大會：免費PIZZA吃好吃滿</li>
+<li>寒假漫遊花東：五天四夜愜意行程帶你遊遍花蓮台東</li>
+<li>暑假攻武嶺：炎炎夏日帶你攻下海拔3275m的台灣公路最高點</li>
+<li>TCAR：緊張刺激的單車RPG大地遊戲</li>
+<li>私約：社團中約騎 騎車交朋友一點也不難</li>
+</ul>
+<p>.</p>
+<h1 id="社員福利">社員福利</h1>
+<ul>
+<li>終身制 一日社員終身社員</li>
+<li>獲得台大單車社獨家設計龍頭上蓋</li>
+<li>參與期初期末社員PIZZA大會資格</li>
+<li>免費租借社車社帽</li>
+<li>取得購買社車衣資格(*註)</li>
+</ul>
+<p>.</p>
+<h1 id="聯絡and加入我們">聯絡and加入我們</h1>
+<ul>
+<li>申請加入FB社團：goo.gl/iE8EAH</li>
+<li>午聚時間找幹部辦理入社：每週二12:20@社辦(活大219室)</li>
+<li>所有的活動資訊都會透過社團及粉專發佈，非社員也可參加唷</li>
+<li>FB社團是社員們交流的主要平台，所有單車社的活定資訊都會在這裡公布，也可以在版上問問題跟揪團騎車~ 有許多前人旅行的經驗，可以當作參考，也有不少單車社特有的活動介紹~</li>
+</ul>
 
 
 
