--- a/public/404.html
+++ b/public/404.html
@@ -34,6 +34,22 @@
 		<div id="menu">
 	
 	
+	
+	<a href="/about/">About</a>
+	
+	
+	
+	<a href="/events/">Events</a>
+	
+	
+	
+	<a href="/members/">Members</a>
+	
+	
+	
+	<a href="/posts/">Posts</a>
+	
+	
 	<span class="right">
 		<a onclick="toggleTheme('dark');">
 		<i data-feather="moon"></i>
