--- a/public/about/index.html
+++ b/public/about/index.html
@@ -73,13 +73,15 @@
 	
 	<div>
 		<h1>About</h1>
-		<div><p>騎車、吃胖、交朋友，
-無論你在不在學，
-無論你是不是讀台大，
-都歡迎各位舊雨新知一同加入台大單車社~</p>
-<p><a href="https://www.facebook.com/ntucyc">Facebook 粉專</a>
+		<div><p><a href="https://www.facebook.com/ntucyc">Facebook 粉專</a>
 <a href="https://www.facebook.com/groups/NTUCYCLUB/">Facebook 社團</a>
 <a href="https://youtu.be/072tU1tamd0">優惠活動</a></p>
+<h1 id="本社宗旨">本社宗旨</h1>
+<p>絕不詐騙，有疑問請打165</p>
+<p>騎車、吃胖、交朋友，</p>
+<p>無論你在不在學，</p>
+<p>無論你是不是讀台大，</p>
+<p>都歡迎各位舊雨新知一同加入台大單車社~</p>
 <h1 id="為什麼要加入單車社">為什麼要加入單車社</h1>
 <ul>
 <li>帶你遊遍全台灣 擁抱大自然 享受脫離塵囂的自由</li>
@@ -104,6 +106,9 @@
 <li>私約：社團中約騎 騎車交朋友一點也不難</li>
 </ul>
 <h1 id="社員福利">社員福利</h1>
+<p>無論你在不在學，</p>
+<p>無論是不是讀台大，</p>
+<p>都歡迎各位舊雨新知一同加入台大車社~</p>
 <ul>
 <li>終身制 一日社員終身社員</li>
 <li>獲得台大單車社獨家設計龍頭上蓋</li>
@@ -118,6 +123,12 @@
 <li>所有的活動資訊都會透過社團及粉專發佈，非社員也可參加唷</li>
 <li>FB社團是社員們交流的主要平台，所有單車社的活定資訊都會在這裡公布，也可以在版上問問題跟揪團騎車~ 有許多前人旅行的經驗，可以當作參考，也有不少單車社特有的活動介紹~</li>
 </ul>
+<h1 id="社團簡介">社團簡介</h1>
+<p>創立於民國78年4月1號，</p>
+<p><a href="http://ntucyclub.wordpress.com/">社團部落格舊站</a> 2016後就沒在更新了沒人交接不會用wordpress QQ</p>
+<p>有許多前人旅行的經驗，可以當作參考，也有不少單車社特有的活動介紹~</p>
+<p><a href="http://ntu-cyclub.blog.ntu.edu.tw/">舊舊站</a></p>
+<p>PTT 社版：NTUCYCLUB</p>
 </div>
 	</div>
 	
