--- a/public/members/index.html
+++ b/public/members/index.html
@@ -76,11 +76,12 @@
 		<div><h1 id="109-2-幹部名單">109-2 幹部名單</h1>
 <ul>
 <li>社長 資工三 熊育霆</li>
-<li>副社長 心裡三 矯其臻</li>
+<li>副社長 心理三 矯其臻</li>
 <li>活動長 經濟二 麥瑋恩</li>
 <li>活動長 大氣一 張哲瑋</li>
 <li>網管 土木四 宋柏賢</li>
 <li>總務 農化五 陳昱成</li>
+<li>庶務 生工二 林仲甫</li>
 <li>美宣 資工一 董瑋</li>
 </ul>
 </div>
